2009-01-05  Timo Teras  <timo.teras@iki.fi>
	* src/racoon/session.c: do not use counting in signal handling
	  as it was unsafe by not using atomic functions (post increment
	  is not necessarily atomic). instead reap all children on
	  SIGCHLD as that was the only signal needing signal counting.

2008-12-30  Timo Teras  <timo.teras@iki.fi>
	* src/racoon/session.c: reset working copy of select mask after
	  call to schedular() as it can change file descriptor mask
	  (this was broken by my commit on 2008-12-23)

2008-12-23  Timo Teras  <timo.teras@iki.fi>
	* src/racoon/{admin.c|admin_var.h|cfparse.y|debug.h|evt.c|evt.h|
	  grabmyaddr.c|grabmyaddr.h|handler.h|isakmp.c|isakmp_inf.c|
	  isakmp_var.h|localconf.c|localconf.h|main.c|nattraversal.c|
	  pfkey.c|pfkey.h|privsep.c|session.c|session.h}: rewrite
	  local address detection, make some functions static that are
	  not needed global, rework how fd_set is construction for the
	  main loop select()
	* src/racoon/{cfparse.y|cftoken.l|localconf.h|localconf.c|
	  ipsec_doi.c|racoon.conf.5}: remove the obsoleted global identity
	  configuration option

2008-12-18  Timo Teras  <timo.teras@iki.fi>
	From Arnaud Ebalard <arno@natisbad.org>:
	* src/racoon/pfkey.c: delete larval ph2handles when expire
	  with hard lifetime received

2008-12-16  Timo Teras  <timo.teras@iki.fi>
	* src/racoon/pfkey.c: Fix transport mode address selection
	  in acquire handling (broke on 2008-12-05 commit)
	* README: Update maintainers, links and add links to CVS and trac

2008-12-08  Yvan Vanhullebus  <vanhu@netasq.com>
	* src/racoon/isakmp.c: Fixed compilation when DPD support is
	  disabled.
	* src/racoon/grabmyaddr.c: Fixed compilation on FreeBSD
	  (RTM_IFINFO and RTM_OIFINFO stuff).

2008-12-08  Timo Teras  <timo.teras@iki.fi>
	* src/racoon/{pfkey.c|privsep.c|privsep.h}: do not cache pfkey
	  sockets for SA dumps: it might cause some notifications to
	  not be handled when select() has triggered pfkey, but timer